@@ -53,22 +53,13 @@ model_annotation_type::resolve_hook (resolution_scope *scope)
 {
   model_class *annot
     = global->get_compiler ()->java_lang_annotation_Annotation ();
-  if (from_class)
-    {
-      if (interfaces.size () != 1)
-	throw error ("annotation implements wrong number of interfaces");
-      // FIXME: check that we have just Annotation here.
-    }
-  else
-    {
-      // When parsing we don't add the interface.
-      assert (interfaces.empty ());
 
-      location w = get_location ();
-      ref_forwarding_type anno = new model_forwarding_resolved (w, annot);
-      std::list<ref_forwarding_type> ifaces;
-      set_implements (ifaces);
-    }
+  assert (interfaces.empty ());
+
+  location w = get_location ();
+  ref_forwarding_type anno = new model_forwarding_resolved (w, annot);
+  std::list<ref_forwarding_type> ifaces;
+  set_implements (ifaces);
 
   for (member_type::const_iterator i = anno_members.begin ();
        i != anno_members.end ();
